updated index.html to be linked to tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -36,6 +36,8 @@
       engineering.
     </p>
 
+    <p><a href="tweets.html">View My Tweets</a></p>
+
     <!-- Clickable Image -->
     <a href="https://www.alxafrica.com/" target="_blank">
       <img
