--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,48 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Basic HTML</title>
+    <title>My First Webpage</title>
   </head>
   <body>
-    <!-- Headings -->
-    <h1>Welcome to My First Webpage</h1>
-    <h2>Learning Web Development</h2>
-    <h3>Building Skills Step by Step</h3>
+    <!-- Header Navigation -->
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </header>
 
-    <!-- Paragraphs -->
-    <p>
-      This is my very first webpage built using basic HTML. It includes
-      headings, paragraphs, and an image link as part of the foundational
-      structure.
-    </p>
+    <!-- Main Content -->
+    <main>
+      <article>
+        <h1>Welcome to My First Webpage</h1>
+        <h2>Learning Web Development</h2>
+        <h3>Building Skills Step by Step</h3>
 
-    <p>
-      I am learning how websites are created from scratch. Understanding the
-      building blocks of HTML is the first step toward becoming a great web
-      developer.
-    </p>
+        <p>
+          This is my very first webpage built using basic HTML. It includes
+          headings, paragraphs, and an image link as part of the foundational
+          structure.
+        </p>
 
-    <p>
-      In this project, I am practicing how to structure text content and format
-      it properly using standard HTML tags. Each element has a purpose and
-      meaning.
-    </p>
+        <p>
+          I am learning how websites are created from scratch. Understanding the
+          building blocks of HTML is the first step toward becoming a great web
+          developer.
+        </p>
 
-    <p>
-      As I continue this journey, I hope to acquire more skills in front-end and
-      back-end development, ultimately becoming confident in full-stack
-      engineering.
-    </p>
+        <p>
+          In this project, I am practicing how to structure text content and
+          format it properly using standard HTML tags. Each element has a
+          purpose and meaning.
+        </p>
 
-    <p><a href="tweets.html">View My Tweets</a></p>
+        <p>
+          As I continue this journey, I hope to acquire more skills in front-end
+          and back-end development, ultimately becoming confident in full-stack
+          engineering.
+        </p>
 
-    <!-- Clickable Image -->
-    <a href="https://www.alxafrica.com/" target="_blank">
-      <img
-        src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-        alt="Clickable Logo"
-        width="300"
-      />
-    </a>
+        <a href="https://www.alxafrica.com/" target="_blank">
+          <img
+            src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
+            alt="Clickable Logo"
+            width="300"
+          />
+        </a>
+
+        <p><a href="tweets.html">View My Tweets</a></p>
+      </article>
+
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <p>
+        Made by Magnus Sedinam Yao Afiawo -
+        <a href="https://github.com/MagCarter07" target="_blank">here</a>
+      </p>
+    </footer>
   </body>
 </html>
