--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,31 +6,54 @@
     <title>My Tweets</title>
   </head>
   <body>
-    <h1>My Embedded Tweets</h1>
+    <!-- Header Navigation -->
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </header>
 
-    <!-- Link back to homepage -->
-    <p><a href="index.html">Go back to Home</a></p>
+    <!-- Main Content -->
+    <main>
+      <article>
+        <h1>My Embedded Tweet</h1>
 
-    <!-- Embedded Tweet -->
-    <blockquote class="twitter-tweet">
-      <p lang="en" dir="ltr">
-        Just revamped my GitHub and LinkedIn profiles to better showcase my
-        growth as a Front-End Developer and ALX Software Engineering student.<br /><br />
-        Check them out 👇<br />
-        🔗 https://t.co/Sd6ffuIXbb<br />
-        🔗 https://t.co/fuT5tyixfP #ALX_SE #ALX_FE @alx_africa
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">
+            Just revamped my GitHub and LinkedIn profiles to better showcase my
+            growth as a Front-End Developer and ALX Software Engineering
+            student.<br /><br />
+            Check them out👇 <br />
+            🔗 https://t.co/Sd6ffuIXbb <br />
+            🔗 https://t.co/fuT5tyixfP #ALX_SE #ALX_FE @alx_africa
+          </p>
+          &mdash; Magnus Afiawo (@Baron_Baltimore)
+          <a
+            href="https://twitter.com/Baron_Baltimore/status/1982513758795976970?ref_src=twsrc%5Etfw"
+            >October 26, 2025</a
+          >
+        </blockquote>
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+
+        <p><a href="index.html">Back to Home</a></p>
+      </article>
+
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <p>
+        Made by Magnus Sedinam Yao Afiawo -
+        <a href="https://github.com/MagCarter07" target="_blank">here</a>
       </p>
-      &mdash; Magnus Afiawo (@Baron_Baltimore)
-      <a
-        href="https://twitter.com/Baron_Baltimore/status/1982513758795976970?ref_src=twsrc%5Etfw"
-        >October 26, 2025</a
-      >
-    </blockquote>
-
-    <script
-      async
-      src="https://platform.twitter.com/widgets.js"
-      charset="utf-8"
-    ></script>
+    </footer>
   </body>
 </html>
