fixed index.html and tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My First Webpage</title>
+    <title>Index</title>
   </head>
   <body>
-    <!-- Header Navigation -->
     <header>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -14,7 +13,6 @@
       </ul>
     </header>
 
-    <!-- Main Content -->
     <main>
       <article>
         <h1>Welcome to My First Webpage</h1>
@@ -61,7 +59,6 @@
       </aside>
     </main>
 
-    <!-- Footer -->
     <footer>
       <p>
         Made by Magnus Sedinam Yao Afiawo -
