--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Tweets</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Tweets</title>
   </head>
   <body>
-    <!-- Header Navigation -->
     <header>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -14,7 +13,6 @@
       </ul>
     </header>
 
-    <!-- Main Content -->
     <main>
       <article>
         <h1>My Embedded Tweet</h1>
@@ -24,9 +22,9 @@
             Just revamped my GitHub and LinkedIn profiles to better showcase my
             growth as a Front-End Developer and ALX Software Engineering
             student.<br /><br />
-            Check them out👇 <br />
-            🔗 https://t.co/Sd6ffuIXbb <br />
-            🔗 https://t.co/fuT5tyixfP #ALX_SE #ALX_FE @alx_africa
+            Check them out 👇<br />
+            https://t.co/Sd6ffuIXbb<br />
+            https://t.co/fuT5tyixfP
           </p>
           &mdash; Magnus Afiawo (@Baron_Baltimore)
           <a
@@ -48,7 +46,6 @@
       </aside>
     </main>
 
-    <!-- Footer -->
     <footer>
       <p>
         Made by Magnus Sedinam Yao Afiawo -
