second try fix for index.html and tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -18,40 +18,19 @@
         <h1>Welcome to My First Webpage</h1>
         <h2>Learning Web Development</h2>
         <h3>Building Skills Step by Step</h3>
-
+        <p>This is my very first webpage built using basic HTML.</p>
         <p>
-          This is my very first webpage built using basic HTML. It includes
-          headings, paragraphs, and an image link as part of the foundational
-          structure.
+          I am learning web development through structured hands-on practice.
         </p>
-
-        <p>
-          I am learning how websites are created from scratch. Understanding the
-          building blocks of HTML is the first step toward becoming a great web
-          developer.
-        </p>
-
-        <p>
-          In this project, I am practicing how to structure text content and
-          format it properly using standard HTML tags. Each element has a
-          purpose and meaning.
-        </p>
-
-        <p>
-          As I continue this journey, I hope to acquire more skills in front-end
-          and back-end development, ultimately becoming confident in full-stack
-          engineering.
-        </p>
-
+        <p>This page contains headings, paragraphs, and a clickable image.</p>
+        <p>Below is the ALX Africa logo, linking to their website.</p>
         <a href="https://www.alxafrica.com/" target="_blank">
           <img
             src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-            alt="Clickable Logo"
+            alt="ALX Logo"
             width="300"
           />
         </a>
-
-        <p><a href="tweets.html">View My Tweets</a></p>
       </article>
 
       <aside>
