--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tweets</title>
   </head>
   <body>
@@ -16,15 +16,11 @@
     <main>
       <article>
         <h1>My Embedded Tweet</h1>
-
         <blockquote class="twitter-tweet">
           <p lang="en" dir="ltr">
             Just revamped my GitHub and LinkedIn profiles to better showcase my
             growth as a Front-End Developer and ALX Software Engineering
-            student.<br /><br />
-            Check them out 👇<br />
-            https://t.co/Sd6ffuIXbb<br />
-            https://t.co/fuT5tyixfP
+            student.
           </p>
           &mdash; Magnus Afiawo (@Baron_Baltimore)
           <a
@@ -32,13 +28,6 @@
             >October 26, 2025</a
           >
         </blockquote>
-        <script
-          async
-          src="https://platform.twitter.com/widgets.js"
-          charset="utf-8"
-        ></script>
-
-        <p><a href="index.html">Back to Home</a></p>
       </article>
 
       <aside>
@@ -52,5 +41,11 @@
         <a href="https://github.com/MagCarter07" target="_blank">here</a>
       </p>
     </footer>
+
+    <script
+      async
+      src="https://platform.twitter.com/widgets.js"
+      charset="utf-8"
+    ></script>
   </body>
 </html>
