--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,48 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Basic HTML</title>
-  </head>
-  <body>
-    <header>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tweets.html">Tweets</a></li>
-      </ul>
-    </header>
-
-    <main>
-      <article>
-        <h1>Welcome to My First Webpage</h1>
-        <h2>Learning Web Development</h2>
-        <h3>Building Skills Step by Step</h3>
-        <p>This is my very first webpage built using basic HTML.</p>
-        <p>
-          I am learning web development through structured hands-on practice.
-        </p>
-        <p>This page contains headings, paragraphs, and a clickable image.</p>
-        <p>Below is the ALX Africa logo, linking to their website.</p>
-        <a href="https://www.alxafrica.com/" target="_blank">
-          <img
-            src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-            alt="ALX Logo"
-            width="300"
-          />
-        </a>
-      </article>
-
-      <aside>
-        <p>placeholder to add comment thread later</p>
-      </aside>
-    </main>
-
-    <footer>
-      <p>
-        Made by Magnus Sedinam Yao Afiawo -
-        <a href="https://github.com/MagCarter07" target="_blank">here</a>
-      </p>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Basic HTML</title>
+</head>
+<body>
+<header>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="tweets.html">Tweets</a></li>
+  </ul>
+</header>
+<main>
+  <article>
+    <h1>Welcome to My First Webpage</h1>
+    <h2>Learning Web Development</h2>
+    <h3>Building Skills Step by Step</h3>
+    <p>This is my very first webpage built using basic HTML.</p>
+    <p>I am learning web development through structured hands-on practice.</p>
+    <p>This page contains headings, paragraphs, and a clickable image.</p>
+    <p>Below is the ALX Africa logo, linking to their website.</p>
+    <a href="https://www.alxafrica.com/" target="_blank"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="300" /></a>
+  </article>
+  <aside><p>placeholder to add comment thread later</p></aside>
+</main>
+<footer><p>Made by Magnus Afiawo - <a href='https://github.com/MagCarter07' target='_blank'>here</a></p></footer>
+</body>
 </html>
